src/objects/Agroways_Farmer_Group__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Agroways Farmer Groups</relationshipLabel>
        <relationshipName>Agroways_Farmer_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Farmer_Group_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Farmer Group Registered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <label>Group Type</label>
        <picklist>
            <picklistValues>
                <fullName>Community Based Organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmer Cooperative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmer Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmer Club/Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Women Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faith-based Organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SACCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welfare/Funeral Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interviewee_Name__c</fullName>
        <label>Interviewee Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewee_Position_in_Farmer_Group__c</fullName>
        <label>Interviewee Position in Farmer Group</label>
        <picklist>
            <picklistValues>
                <fullName>Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treasurer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Major_Activity__c</fullName>
        <label>Major Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to farming information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint gardening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farming credit/loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to agro inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing of produce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Members__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Members</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Level__c</fullName>
        <label>Registration Level</label>
        <picklist>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcounty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Village</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_Provided_to_Farmers__c</fullName>
        <label>Services Provided to Farmers</label>
        <picklist>
            <picklistValues>
                <fullName>Trainings on good agriculture practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to market information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to quality inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to credit/loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>VAC__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The VAC who interviewed a respondent to create this farmer group</description>
        <inlineHelpText>The VAC who interviewed a respondent to create this farmer group</inlineHelpText>
        <label>VAC</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Agroways Farmer Groups</relationshipLabel>
        <relationshipName>Agroways_Farmer_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Works_with_other_groups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Works with other groups?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_Formed__c</fullName>
        <label>Year Formed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(Year_Formed__c)</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Agroways Farmer Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Year__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Group_Type__c</columns>
        <columns>Year_Formed__c</columns>
        <columns>Farmer_Group_Registered__c</columns>
        <columns>Registration_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AFG{YYYY}{MM}-{0}</displayFormat>
        <label>Agroways Farmer Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agroways Farmer Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>